Fix footer link alignment for desktop, tablet, and mobile.

--- a/main.css
+++ b/main.css
@@ -667,7 +667,7 @@ footer .subtitle {
 footer ul.menu{
   display: flex;
   align-items: flex-start;
-  justify-content: space-around;
+  justify-content: center;
   padding: 0;
   margin: 0;
 }
@@ -675,7 +675,7 @@ footer ul.menu{
 
 footer li {
   list-style: none;
-  margin: .5rem 0;
+  margin: 1.25rem 0;
 }
 
 footer li a {
